Update for ListView and SPinner on 18-03-2018

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,32 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MyList"
             android:label="@string/title_activity_my_list"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ShowMyContent"
             android:label="@string/title_activity_show_my_content"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GridViewActivity"
+            android:label="@string/title_activity_grid_view"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SpinnerExample"
+            android:label="@string/title_activity_spinner_example"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginAct"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme.NoActionBar">   <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
     </application>
 
 </manifest>
